tests/NormalTests/paczka1/small_fuzzy/76199879.err
Error in line 1: dDPH8PN6aXj A848 90,3
Error in line 5: PPuyMt23bq S232 47,5
Error in line 10: S587 A848 -1,9
Error in line 6: S587 A848 2,8
Error in line 11: S587 S587 92,7
